--- a/menuColors.html
+++ b/menuColors.html
@@ -69,19 +69,22 @@
           <img class="img-fluid" src="images/colors.png" alt="">
         </div>
 
-        <div class="col-md-4">
-          <h3 class="my-3">¡Canta conmigo!</h3>
+       <div class="col-md-4">
+          <h3 class="my-3">Escoge el color correcto</h3>
           <p>
 
-
+          Durante el juego van a ir apareciendo colores y palabras que dicen un color, la finalidad del juego es que el niño pueda asociar el color escrito con uno de los círculos de colores.
           </p>
           <h4 class="my-3">Habilidades trabajadas</h4>
           <ul>
             <li>Audicion</li>
-            <li>Reconocer patrones</li>
-            <li>Atención</li>
+            <li>Memoria</li>
+            <li>Habilidades Visuales </li>
             <li>Seguir instrucciones</li>
+            <li>Capacidad de discernir </li>
+
           </ul>
+
 
           <a href="#" class="button">Jugar</a>
         </div>
