--- a/menuDesafio.html
+++ b/menuDesafio.html
@@ -70,17 +70,20 @@
         </div>
 
         <div class="col-md-4">
-          <h3 class="my-3">¡Canta conmigo!</h3>
+          <h3 class="my-3">Desafío</h3>
           <p>
 
-
+          En este juego, dado un laberinto el niño debe dibujar usando el mouse un camino para que alegria pueda llegar hasta tristeza. 
           </p>
           <h4 class="my-3">Habilidades trabajadas</h4>
           <ul>
-            <li>Audicion</li>
-            <li>Reconocer patrones</li>
-            <li>Atención</li>
+
+           <li>Atención</li>
+            <li>Memoria</li>
+            <li>Habilidades Motriz </li>
             <li>Seguir instrucciones</li>
+            <li>Habilidad espacial </li>
+
           </ul>
 
           <a href="#" class="button">Jugar</a>
@@ -116,7 +119,7 @@
         </div>
 
         <div class="col-md-3 col-sm-6 mb-4">
-          <a href="menuDesafio.html">
+          <a href="menuColors.html">
             <img class="img-fluid" src="images/colorspeq.png" alt="">
           </a>
         </div>
