--- a/menuPajaro.html
+++ b/menuPajaro.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="col-md-3 col-sm-6 mb-4">
-          <a href="menuSonido.html">
+          <a href="menuSonidos.html">
             <img class="img-fluid" src="images/sonidospeq.png" alt="">
           </a>
         </div>
