--- a/menuPerro.html
+++ b/menuPerro.html
@@ -70,14 +70,16 @@
         </div>
 
         <div class="col-md-4">
-          <h3 class="my-3">¡Canta conmigo!</h3>
-          <p>Un juego para mejorar las habilidades sensoriales a través de los sonidos. El niño diispone de un piano o un dispositivo semejante y debe imitar las melodías sencillas del pajaro, las teclas correspondientes aparecen en pantalla.</p>
+          <h3 class="my-3">¿Donde esta mi letra?</h3>
+          <p>En el juego tenemos un perro que olvido donde enterro su letra, durante el juego se van a mostrar pistas de la letra que extravio el perro y donde esta enterrada, para que le niño recuerde cual fue la letra y la ubicacion de la misma en los recuadros marrones</p>
           <h4 class="my-3">Habilidades trabajadas</h4>
           <ul>
-            <li>Audicion</li>
+            <li>Memoria</li>
             <li>Reconocer patrones</li>
             <li>Atención</li>
             <li>Seguir instrucciones</li>
+            <li>Aprendizaje del abecedario</li>
+
           </ul>
 
           <a href="#" class="button">Jugar</a>
