--- a/menuSonidos.html
+++ b/menuSonidos.html
@@ -70,17 +70,17 @@
         </div>
 
         <div class="col-md-4">
-          <h3 class="my-3">¡Canta conmigo!</h3>
-          <p>
+          <h3 class="my-3">¿Quién hace ese sonido ?</h3>
+          <p>Durante el juego se muestran una serie de animales, y se escuchan sonidos referentes a estos. El niño debe escuchar el sonido y hacer click sobre el animal que emite ese sonido. De manera que el niño asocie un sonido con un animal.
 
 
           </p>
           <h4 class="my-3">Habilidades trabajadas</h4>
           <ul>
             <li>Audicion</li>
-            <li>Reconocer patrones</li>
-            <li>Atención</li>
-            <li>Seguir instrucciones</li>
+            <li>Memoria</li>
+            <li>Asociatividad</li>
+            <li>Capacidad de seguir instrucciones </li>
           </ul>
 
           <a href="#" class="button">Jugar</a>
