--- a/Register.html
+++ b/Register.html
@@ -54,8 +54,26 @@
 													<input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirme Contraseña *">
 												</div>
 											</div>
+										<div class="row">
+											<div class="col-xs-6 col-sm-6 col-md-6">
+												<div class="form-group">
+												<label>
+     											 <input type="checkbox" checked="checked" name="remember"> Profesor
+    										</label>
+												</div>
+											</div>
+											<div class="col-xs-6 col-sm-6 col-md-6">
+												<div class="form-group">
+													<label>
+     											 <input type="checkbox" checked="checked" name="remember"> Alumno
+    										</label>
+												</div>
+											</div>
 										</div>
-										<a class="foot-note" >Todos los campos marcados con asterisco(*) son obligatorios</a>
+
+
+											
+    									<a class="foot-note" >Todos los campos marcados con asterisco(*) son obligatorios</a>
 										<br>
 										<a class="nav-link external btn btn-info btn-block submitbutton" type="submit" href="Login.html" type="submit">Registrarme</a>
 
