--- a/menuGazela.html
+++ b/menuGazela.html
@@ -38,6 +38,9 @@
               <a class="nav-link" href="Home.html">Sobre nosotros</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="menuOso.html">Kinect </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="menuPajaro.html">Cognitivos</a>
             </li>
             <li class="nav-item">
@@ -45,6 +48,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Home.html">Perfil</a>
+            </li>
+             <li class="nav-item">
+                <a class="nav-link external" href="Login.html">Salir</a>
             </li>
           </ul>
         </div>
