--- a/menuOso.html
+++ b/menuOso.html
@@ -41,6 +41,9 @@
               <a class="nav-link" href="Home.html">Sobre nosotros</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="menuOso.html">Kinect </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="menuPajaro.html">Cognitivos</a>
             </li>
             <li class="nav-item">
@@ -49,6 +52,9 @@
             <li class="nav-item">
               <a class="nav-link" href="Home.html">Perfil</a>
             </li>
+             <li class="nav-item">
+                                            <a class="nav-link external" href="Login.html">Salir</a>
+                                        </li>
           </ul>
         </div>
       </div>
