--- a/Home.html
+++ b/Home.html
@@ -61,6 +61,9 @@
                                         <li class="nav-item">
                                             <a class="nav-link" href="#tm-section-4">Perfil</a>
                                         </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link external" href="Login.html">Salir</a>
+                                        </li>
                                         
                                     </ul>
 
