--- a/menuCarro.html
+++ b/menuCarro.html
@@ -24,9 +24,9 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
+     <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
       <div class="container">
-        <a class="navbar-brand" href="Home.html">Clinica Paso a Paso</a>
+        <a class="navbar-brand" href="Home.html">Clinica Pasitos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,8 +37,11 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-        <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="Home.html">Sobre nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="menuOso.html">Kinect </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="menuPajaro.html">Cognitivos</a>
@@ -48,6 +51,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Home.html">Perfil</a>
+            </li>
+             <li class="nav-item">
+                <a class="nav-link external" href="Login.html">Salir</a>
             </li>
           </ul>
         </div>
