--- a/menuGato.html
+++ b/menuGato.html
@@ -21,7 +21,7 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
+     <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
       <div class="container">
         <a class="navbar-brand" href="Home.html">Clinica Pasitos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,6 +38,9 @@
               <a class="nav-link" href="Home.html">Sobre nosotros</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="menuOso.html">Kinect </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="menuPajaro.html">Cognitivos</a>
             </li>
             <li class="nav-item">
@@ -46,10 +49,14 @@
             <li class="nav-item">
               <a class="nav-link" href="Home.html">Perfil</a>
             </li>
+             <li class="nav-item">
+                                            <a class="nav-link external" href="Login.html">Salir</a>
+                                        </li>
           </ul>
         </div>
       </div>
     </nav>
+
 
     <!-- Page Content -->
     <div class="container">
