--- a/menuPajaro.html
+++ b/menuPajaro.html
@@ -24,7 +24,7 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
+     <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
       <div class="container">
         <a class="navbar-brand" href="Home.html">Clinica Pasitos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,6 +41,9 @@
               <a class="nav-link" href="Home.html">Sobre nosotros</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="menuOso.html">Kinect </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="menuPajaro.html">Cognitivos</a>
             </li>
             <li class="nav-item">
@@ -49,7 +52,10 @@
             <li class="nav-item">
               <a class="nav-link" href="Home.html">Perfil</a>
             </li>
-          </ul>
+
+ <li class="nav-item">
+                                            <a class="nav-link external" href="Login.html">Salir</a>
+                                        </li>          </ul>
         </div>
       </div>
     </nav>
