--- a/Home.html
+++ b/Home.html
@@ -58,8 +58,8 @@
                                         <li class="nav-item">
                                             <a class="nav-link external" href="menuEmojis.html">Neurofeedback</a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#tm-section-4">Perfil</a>
+                                     <li class="nav-item">
+                                            <a class="nav-link external" href="Register.html">Registrarse</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link external" href="Login.html">Salir</a>
