--- a/Register.html
+++ b/Register.html
@@ -58,14 +58,14 @@
 											<div class="col-xs-6 col-sm-6 col-md-6">
 												<div class="form-group">
 												<label>
-     											 <input type="checkbox" checked="checked" name="remember"> Profesor
+     											 <input type="checkbox"  name="remember"> Profesor
     										</label>
 												</div>
 											</div>
 											<div class="col-xs-6 col-sm-6 col-md-6">
 												<div class="form-group">
 													<label>
-     											 <input type="checkbox" checked="checked" name="remember"> Alumno
+     											 <input type="checkbox"  name="remember"> Alumno
     										</label>
 												</div>
 											</div>
